--- a/RenderLab/RenderLab.vcxproj
+++ b/RenderLab/RenderLab.vcxproj
@@ -195,6 +195,7 @@
     <ClCompile Include="render\RdrContextD3D11.cpp" />
     <ClCompile Include="render\RdrContextD3D11_Shaders.cpp" />
     <ClCompile Include="render\RdrDrawOp.cpp" />
+    <ClCompile Include="render\RdrMaterial.cpp" />
     <ClCompile Include="render\RdrTransientMem.cpp" />
     <ClCompile Include="render\Renderer.cpp" />
     <ClCompile Include="render\RdrShaderSystem.cpp" />
@@ -246,6 +247,7 @@
     <ClInclude Include="render\RdrDrawState.h" />
     <ClInclude Include="render\RdrFrameState.h" />
     <ClInclude Include="render\RdrGeometry.h" />
+    <ClInclude Include="render\RdrMaterial.h" />
     <ClInclude Include="render\RdrPostProcess.h" />
     <ClInclude Include="render\RdrRequests.h" />
     <ClInclude Include="render\RdrResource.h" />
