Moved code src files into "src" directory

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,13 @@
 /.vs/
-/Debug/
-/Release/
-/TextSDF/Debug/
-/TextSDF/Release/
-/TextSDF/x64/
-RenderLab.opensdf
-RenderLab.sdf
+*.opensdf
+*.sdf
 *.vcxproj.filters
 *.vcxproj.user
 *.opendb
 *.vc.db
+*.ipch
+*.log
+*.suo
 /ipch/
 /obj/
 *.pdb
