* Implemented binning for all asset types.  The main RenderLab client now knows nothing about src data files.  Only AssetBinService knows how to read them (except for shaders). * Fixed scene camera's aspect ratio never being set, resulting in incorrect frustums and culling. * Added post-processing effects asset to control bloom, eye adaptation, etc through data. * Added left+right mouse button camera translation.  Also fixed mouse capture when multiple buttons are pressed.

--- a/src/AssetBinService/AssetBinService.vcxproj
+++ b/src/AssetBinService/AssetBinService.vcxproj
@@ -171,15 +171,21 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="MaterialBinner.cpp" />
     <ClCompile Include="ModelBinner.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="PostProcessEffectsBinner.cpp" />
     <ClCompile Include="SceneBinner.cpp" />
+    <ClCompile Include="SkyBinner.cpp" />
     <ClCompile Include="TextureBinner.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="MaterialBinner.h" />
     <ClInclude Include="ModelBinner.h" />
     <ClInclude Include="IAssetBinner.h" />
+    <ClInclude Include="PostProcessEffectsBinner.h" />
     <ClInclude Include="SceneBinner.h" />
+    <ClInclude Include="SkyBinner.h" />
     <ClInclude Include="TextureBinner.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
