--- a/src/AssetLib/AssetLib.vcxproj
+++ b/src/AssetLib/AssetLib.vcxproj
@@ -22,6 +22,7 @@
     <ClCompile Include="AssetDef.cpp" />
     <ClCompile Include="MaterialAsset.cpp" />
     <ClCompile Include="ModelAsset.cpp" />
+    <ClCompile Include="PostProcessEffectsAsset.cpp" />
     <ClCompile Include="SceneAsset.cpp" />
     <ClCompile Include="SkyAsset.cpp" />
     <ClCompile Include="TextureAsset.cpp" />
@@ -31,6 +32,7 @@
     <ClInclude Include="BinFile.h" />
     <ClInclude Include="MaterialAsset.h" />
     <ClInclude Include="ModelAsset.h" />
+    <ClInclude Include="PostProcessEffectsAsset.h" />
     <ClInclude Include="SceneAsset.h" />
     <ClInclude Include="SkyAsset.h" />
     <ClInclude Include="TextureAsset.h" />
