Removing Win32 executables and disabling build config.  Moved x64 exes and build paths to the root bin folder.  There's no good reason to continue to support Win32.

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@
 *.iobj
 *.ilk
 *_debug.exe
+/bin/win32/
 /bin/data/
-/bin/x64/shaders/
-/bin/Win32/shaders/
+/bin/shaders/
 /src/ObjSceneConverter/output
