* Added instancing support. * Added draw op sorting. * Added performance counters for draw calls and state changes as well as timing info for the render thread. * Added ability to create shader resource views independently from resource handles for binding to sub-resources. * Moved most debug settings to a GlobalState object for convenient management of debug settings.

--- a/src/RenderLab/RenderLab.vcxproj.filters
+++ b/src/RenderLab/RenderLab.vcxproj.filters
@@ -188,6 +188,10 @@
     <ClCompile Include="render\RdrComputeOp.cpp">
       <Filter>render</Filter>
     </ClCompile>
+    <ClCompile Include="GlobalState.cpp" />
+    <ClCompile Include="render\RdrInstancedObjectDataBuffer.cpp">
+      <Filter>render</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Types.h" />
@@ -326,6 +330,10 @@
       <Filter>render</Filter>
     </ClInclude>
     <ClInclude Include="render\RdrComputeOp.h">
+      <Filter>render</Filter>
+    </ClInclude>
+    <ClInclude Include="GlobalState.h" />
+    <ClInclude Include="render\RdrInstancedObjectDataBuffer.h">
       <Filter>render</Filter>
     </ClInclude>
   </ItemGroup>
