--- a/src/RenderLab/RenderLab.vcxproj
+++ b/src/RenderLab/RenderLab.vcxproj
@@ -175,6 +175,7 @@
     <ClCompile Include="debug\DebugConsole.cpp" />
     <ClCompile Include="debug\PostProcessDebugger.cpp" />
     <ClCompile Include="FrameTimer.cpp" />
+    <ClCompile Include="GlobalState.cpp" />
     <ClCompile Include="input\CameraInputContext.cpp" />
     <ClCompile Include="input\Input.cpp" />
     <ClCompile Include="Precompiled.cpp">
@@ -198,6 +199,7 @@
     <ClCompile Include="render\RdrContextD3D11_Shaders.cpp" />
     <ClCompile Include="render\RdrDrawOp.cpp" />
     <ClCompile Include="render\RdrMaterial.cpp" />
+    <ClCompile Include="render\RdrInstancedObjectDataBuffer.cpp" />
     <ClCompile Include="render\RdrPostProcessEffects.cpp" />
     <ClCompile Include="render\RdrProfiler.cpp" />
     <ClCompile Include="render\RdrScratchMem.cpp" />
@@ -222,6 +224,7 @@
     <ClInclude Include="debug\PostProcessDebugger.h" />
     <ClInclude Include="FrameTimer.h" />
     <ClInclude Include="FreeList.h" />
+    <ClInclude Include="GlobalState.h" />
     <ClInclude Include="IDSet.h" />
     <ClInclude Include="input\CameraInputContext.h" />
     <ClInclude Include="input\Input.h" />
@@ -243,6 +246,7 @@
     <ClInclude Include="render\RdrFrameState.h" />
     <ClInclude Include="render\RdrGeometry.h" />
     <ClInclude Include="render\RdrMaterial.h" />
+    <ClInclude Include="render\RdrInstancedObjectDataBuffer.h" />
     <ClInclude Include="render\RdrPostProcess.h" />
     <ClInclude Include="render\RdrPostProcessEffects.h" />
     <ClInclude Include="render\RdrProfiler.h" />
